--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@ body {
 <div class="container">
 <div class="row">
 <div class="col-lg-12 text-center">
-<h2 class="section-heading">Contact</h2><script data-sil-id="5e074c79266322001099140b">var loadWidget = function() { var d = document, w = window, l = window.location,p = l.protocol == "file:" ? "http://" : "//"; if (!w.WS) w.WS = {}; c = w.WS; var m=function(t, o){ var e = d.getElementsByTagName("script"); e=e[e.length-1]; var n = d.createElement(t); if (t=="script") {n.async=true;} for (k in o) n[k] = o[k]; e.parentNode.insertBefore(n, e)}; m("script", { src: p + "bawkbox.com/widget/contact/5e074c79266322001099140b?page=" +encodeURIComponent(l+''), type: 'text/javascript' }); c.load_net = m; }; if(window.Squarespace){ document.addEventListener('DOMContentLoaded', loadWidget); setTimeOut(function(){ document.addEventListener('DOMContentLoaded', loadWidget); }, 3000) } else { loadWidget() } </script><div class="sil-widget-contact sil-widget" id="sil-widget-5e074c79266322001099140b"><a href="//bawkbox.com/install/contact">Contact Box</a></div>
+
 </br>
 </br> </br>
 </br>
@@ -985,9 +985,9 @@ body {
 </br>
 </br>
 </br>
-<footer>
-<p> Wanna join us? Go <a href="https://discord.gg/ZZsyDTa">here</a>to join our discord!
-</footer>
+
+<h3> Wanna join us? Go <a href="https://discord.gg/ZZsyDTa">here</a> to join our discord! </h3>
+
 
 
 
